<resources>
    <string name="app_name">GithubUser</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="nation">Nationality</string>
    <string name="number">Number</string>
    <string name="team">Team</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="search">Search</string>
    <string name="bio_content">Riders Bio</string>
    <string name="search_hint">Username</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="github">Github Users</string>
    <string name="open_github">View on Github</string>
    <string name="user_not_found">Users not found</string>
    <string name="availability_follow">No users found</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>