<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.UserDetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_favorite_border_24"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linear_layout_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    app:civ_border_color="#fff"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:src="@tools:sample/avatars" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tab_layout_container"
                    app:layout_constraintVertical_bias="0.443"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_photo"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/tv_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username"
                    tools:text="@string/location" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tv_loc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loc"
                    tools:text="@string/company" />

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tv_company"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company"
                    tools:text="@string/bio" />

                <Button
                    android:id="@+id/btn_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/open_github"
                    app:layout_constraintStart_toStartOf="@+id/tv_bio"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bio" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:stretchColumns="0,1"
                    app:layout_constraintStart_toStartOf="@+id/tv_bio"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bio">

                    <TableRow
                        android:id="@+id/follow_sec"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_followers"
                            android:layout_column="0"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/followers"></TextView>

                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_column="1"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/following"></TextView>

                    </TableRow>
                </TableLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/tab_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    app:tabGravity="fill" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</RelativeLayout>